new lessons studied and thes lessons modules added also all modules moved to new directory java-se adde modules; bigdecimal biginteger uuid random locale datetime format http loops ---
also some changes made in firstly added modules

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,18 @@
 rootProject.name = 'fullstack_devlog_zerotohero'
-include 'fsdlzth_001-variables'
-include 'fsdlzth_002-operators'
-include 'fsdlzth_000-helloworld'
-include 'fsdlzth_003-stringclass'
-include 'fsdlzth_005-ifstatement'
+include ':java_se:fsdlzth_001-variables'
+include ':java_se:fsdlzth_002-operators'
+include ':java_se:fsdlzth_000-helloworld'
+include ':java_se:fsdlzth_003-stringclass'
+include ':java_se:fsdlzth_004-mathclass'
+include ':java_se:fsdlzth_005-bigdecimal'
+include ':java_se:fsdlzth_006-biginteger'
+include ':java_se:fsdlzth_007-uuid'
+include ':java_se:fsdlzth_008-random'
+include ':java_se:fsdlzth_009-locale'
+include ':java_se:fsdlzth_010-datetime'
+include ':java_se:fsdlzth_011-format'
+include ':java_se:fsdlzth_012-http'
+include ':java_se:fsdlzth_013-ifstatement'
+include ':java_se:fsdlzth_014-loops'
 
-include 'fsdlzth_004-mathclass'
+
