--- a/java_se/fsdlzth_001-variables/build.gradle
+++ b/java_se/fsdlzth_001-variables/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'com.azure:azure-ai-openai:1.0.0-beta.16'
 }
 
 test {
